# -SBC24T02

./: README.md
ESP32-ESP-IDF-SPIFFS-Web-Server-main/: partitions.csv  sdkconfig  sdkconfig.old
ESP32-ESP-IDF-SPIFFS-Web-Server-main/data/: add_user.html  index.html
ESP32-ESP-IDF-SPIFFS-Web-Server-main/main/: CMakeLists.txt  Kconfig.projbuild  connect_wifi.c  deep_sleep_module.c  deep_sleep_module.h  ibeacon_demo.c  ibeacon_demo.h  idf_component.yml  main.c  ota.c  ota.h  thingsboard_send.c  thingsboard_send.h  webserver.c  webserver.h
